--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,11 +2,12 @@
 
 <% for product in @products -%>
 <div class="entry">
-  <%= image_tag(product.image_url) %>
+  <%= link_to(image_tag(product.image_url), :method => :post, :action => 'add_to_cart', :id => product ) %>
   <h3><%=h product.title %></h3>
   <%= product.description %>
   <div class="price-line">
-    <span class="price"><%= product.price %></span>
+    <span class="price"><%= number_to_currency(product.price, :unit =>'£') %></span>
+    <%= button_to "Add to Cart", :action => 'add_to_cart', :id => product %>
   </div>
 </div>
 <% end %>
