--- a/public/stylesheets/new_depot.css
+++ b/public/stylesheets/new_depot.css
@@ -54,6 +54,49 @@ h1 {
   background:   #f8b0f8;
 }
 
+/* START:mainlayout */
+/* Styles for main page */
+
+#banner {
+  background: #9c9;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid;
+  font: small-caps 40px/40px "Times New Roman", serif;
+  color: #282;
+  text-align: center;
+}
+
+#banner img {
+  float: left;
+}
+
+#columns {
+  background: #141;
+}
+
+#main {
+  margin-left: 13em;
+  padding-top: 4ex;
+  padding-left: 2em;
+  background: white;
+}
+
+#side {
+  float: left;
+  padding-top: 1em;
+  padding-left: 1em;
+  padding-bottom: 1em;
+  width: 12em;
+  background: #141;
+}
+
+#side a {
+  color: #bfb;
+  font-size: small;
+}
+/* END:mainlayout */
+
 /* An entry in the store catalog */
 
 #store  .entry {
@@ -98,6 +141,47 @@ h1 {
   margin-right: 2em;
 }
 
+#store .entry form, #store .entry form div {
+    display: inline;
+}
+
+#notice {
+  border: 2px solid red;
+  padding: 1em;
+  margin-bottom: 2em;
+  background-color: #f0f0f0 ;
+  font: bold smaller sans-serif;
+}
+
+/* Styles for the cart on main page */
+
+.cart-title {
+    font: 120% bold;
+}
+
+.item-price, .total-line {
+    text-align: right;
+}
+
+.total-line, .total-cell {
+    font-weight: bold;
+    border-top: 1px solid #595
+}
+
+
+/* Styles for the cart in side bar */
+
+#cart, #cart table {
+    font-size:smaller;
+    color:white;
+}
+
+#cart, table {
+    border-top:     1px dotted #595;
+    border-bottom:  1px dotted #595;
+    margin-bottom:  10px;
+}
+
 /* The error box */
 
 .fieldWithErrors {
@@ -139,4 +223,3 @@ h1 {
   font-size: 12px;
   list-style: square;
 }
-
