--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -4,6 +4,7 @@
 <head>
   <title>Pragmatic Books Online</title>
   <%= stylesheet_link_tag "new_depot", :media => "all" %>
+  <%= javascript_include_tag :defaults %>
 </head>
 <body id="store">
   <div id="banner">
@@ -12,9 +13,9 @@
   </div>
   <div id="columns">
     <div id="side">
-      <div id="cart">
+      <% hidden_div_if(@cart.items.empty?, :id => "cart") do %>
         <%= render(:partial => "cart", :object => @cart) %>
-      </div>
+      <% end %>
       <a href="http://www....">Home</a><br />
       <a href="http://www..../faq">Questions</a><br />
       <a href="http://www....">News</a><br />
