--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,12 +2,16 @@
 
 <% for product in @products -%>
 <div class="entry">
-  <%= link_to(image_tag(product.image_url), :method => :post, :action => 'add_to_cart', :id => product ) %>
+  <% form_remote_tag :url => {:method => :post, :action => 'add_to_cart', :id => product } do %>
+    <%= image_submit_tag(product.image_url) %>
+  <% end %>
   <h3><%=h product.title %></h3>
   <%= product.description %>
   <div class="price-line">
     <span class="price"><%= number_to_currency(product.price, :unit =>'£') %></span>
-    <%= button_to "Add to Cart", :action => 'add_to_cart', :id => product %>
+    <% form_remote_tag :url => {:action => 'add_to_cart', :id => product } do %>
+      <%= submit_tag "Add to Cart" %>
+    <% end %>
   </div>
 </div>
 <% end %>
